basic-yamls/basic-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: basic-deployment
  namespace: test
  labels:
    dep-app: busybox
spec:
  replicas: 2
  selector:
    matchLabels:
      app: busybox
  template:
    metadata:
      labels:
        app: busybox
    spec:
      nodeSelector:
        vm: "0"
      containers:
      - command:
        - /agnhost
        - serve-hostname
        - --tcp
        - --http=false
        - --port
        - "80"
        image: k8s.gcr.io/e2e-test-images/agnhost:2.33
        imagePullPolicy: IfNotPresent
        name: cont-80-tcp
        ports:
        - containerPort: 80
          protocol: TCP
