basic-yamls/basic-policy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: TEMP_NAME
  namespace: test
spec:
  podSelector:
    matchLabels:
      app: busybox
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: other
  policyTypes:
  - Egress
